<resources>
    <string name="app_name">Assignment1</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_dish">Dish</string>
    <string name="title_activity_login">Login Page</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>